<resources>
    <string name="app_name">Proyecto</string>
    <string name="tv_correo">Correo electrónico</string>
    <string name="tv_constraseña">Constraseña</string>
    <string name="tv_fallo">Error</string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Medicinas</string>
    <string name="menu_gallery">Contactos</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg_nombre">Nombre</string>
    <string name="msg_descripcion">Descripción</string>
    <string name="msg_unidades">Unidades</string>
    <string name="msg_precio">Precio</string>
    <string name="msg_caducidad">Fecha de caducidad</string>


    <string name="bt_addMedicamento">Agregar Medicamento</string>
    <string name="bt_actualizarMedicamento">Actualizar Medicamento</string>
    <string name="bt_deleteMedicamento">Eliminar Medicamento</string>
    <string name="msg_seguro_borrado">Esta seguro?</string>
    <string name="msg_seguro_borrado_contacto">Esta Seguro de Eliminar el Contacto?</string>
    <string name="msg_no">No</string>
    <string name="msg_si">Si</string>
    <string name="msg_medicamento_deleted">Medicamento Borrado</string>
    <string name="msg_medicamento_updated">Medicamento Actualizado</string>
    <string name="msg_contacto_updated">Contacto Actualizado</string>
    <string name="msg_data">Faltan datos!!</string>


    <string name="msg_nombrePersona">Nombre</string>
    <string name="msg_primerApe">Primer apellido</string>
    <string name="msg_segundoApe">Segundo Apellido</string>
    <string name="msg_telefono">Teléfono</string>
    <string name="msg_direccion">Dirección</string>

    <string name="bt_addContacto">Agregar Contacto</string>
    <string name="bt_actualizarContacto">Actualizar Contacto</string>
    <string name="bt_deleteContacto">Eliminar Contacto</string>
    <string name="msg_delete_lugar">Eliminar Contacto</string>
    <string name="msg_contacto_deleted">Contacto Eliminado…</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>


    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="rotar_l">Rotar a la izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="todo">Pendiente</string>

    <string name="default_web_client_id_r"
        translatable="false">819251747019-31b2nb8jihhlij6t9ol83svmd0crk2u9.apps.googleusercontent.com</string>


</resources>