<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.medicamento.UpdateMedicamentoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_descripcion"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etUnidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_unidades"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_precio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etFechaCadu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_caducidad"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btDeleteMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#26708E"
            app:cornerRadius="15dp"
            android:text="@string/bt_deleteMedicamento" />

        <Button
            android:id="@+id/btAtualizarMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#26708E"
            android:text="@string/bt_actualizarMedicamento"
            app:cornerRadius="15dp" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/bt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_enviar_correo"
                android:src="@drawable/ic_mail" />
            <ImageButton
                android:id="@+id/bt_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_phone_call"
                android:src="@drawable/ic_phone" />
            <ImageButton
                android:id="@+id/bt_whatsapp"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_whatsapp_send"
                android:scaleType="fitCenter"
                android:src="@drawable/whatsapp_logo"
                tools:ignore="ImageContrastCheck" />
            <ImageButton
                android:id="@+id/bt_web"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_web_view"
                android:scaleType="fitCenter"
                android:src="@drawable/web_logo" />
            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/msgEscucharAudio"
                android:src="@drawable/ic_play" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/msg_imagen"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>