<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.persona.UpdatePersonaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombrePersona"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPrimerApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_primerApe"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etSegundoApell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_segundoApe"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_direccion"
            android:inputType="textLongMessage" />


        <Button
            android:id="@+id/bt_actualizarContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#26708E"
            android:text="@string/bt_actualizarContacto"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/bt_eliminarContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#26708E"
            android:text="@string/bt_deleteContacto"
            app:cornerRadius="15dp" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/msg_phone_call"
                    android:src="@drawable/ic_phone" />
                <ImageButton
                    android:id="@+id/bt_whatsapp"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/msg_whatsapp_send"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whatsapp_logo"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/msg_imagen"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

    </LinearLayout>



</ScrollView>