<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.proyecto.ui.medicamento.MedicamentoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_medicamento" >
        <action
            android:id="@+id/action_nav_home_to_addMedicamentoFragment"
            app:destination="@id/addMedicamentoFragment" />
        <action
            android:id="@+id/action_nav_home_to_updateMedicamentoFragment2"
            app:destination="@id/updateMedicamentoFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addMedicamentoFragment"
        android:name="com.proyecto.ui.medicamento.AddMedicamentoFragment"
        android:label="Agregar Medicamento"
        tools:layout="@layout/fragment_add_medicamento" >
        <action
            android:id="@+id/action_addMedicamentoFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/updateMedicamentoFragment2"
        android:name="com.proyecto.ui.medicamento.UpdateMedicamentoFragment"
        android:label="Actualizar Medicamento"
        tools:layout="@layout/fragment_update_medicamento" >
        <action
            android:id="@+id/action_updateMedicamentoFragment2_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="medicamento"
            app:argType="com.proyecto.model.Medicamento" />
    </fragment>
</navigation>